fix: minnor issues in general